tests/more_path/more_path.exp
Error ---------------------------------------------------------------------------------------------------- Sigma.js:13:7

Cannot call `x.c` because property `c` is missing in `B` [1]. [prop-missing]

   Sigma.js:13:7
   13|     x.c(); // error
             ^

References:
   Sigma.js:10:16
   10| function bar(x:B) {
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- Sigma.js:24:7

Cannot call `x.d` because property `d` is missing in `C` [1]. [prop-missing]

   Sigma.js:24:7
   24|     x.d(); // error
             ^

References:
   Sigma.js:8:7
    8| class C extends B { c() {} }
             ^ [1]


Error ---------------------------------------------------------------------------------------------------- Sigma.js:27:7

Cannot call `x.c` because property `c` is missing in `A` [1]. [prop-missing]

   Sigma.js:27:7
   27|     x.c(); // error
             ^

References:
   Sigma.js:19:16
   19| function foo(x:A) {
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:11:16

Cannot get `obj.childProp_TYPO` because property `childProp_TYPO` is missing in `ChildClass` [1]. [prop-missing]

   test.js:11:16
   11|     return obj.childProp_TYPO; // error (obj: ChildClass)
                      ^^^^^^^^^^^^^^

References:
   test.js:5:7
    5| class ChildClass extends BaseClass {
             ^^^^^^^^^^ [1]



Found 4 errors
